--- a/app/src/main/res/layout/activity_login_entry.xml
+++ b/app/src/main/res/layout/activity_login_entry.xml
@@ -7,7 +7,8 @@
     tools:context=".membership.activity.LoginEntryActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/login_entry_text_input_layout_email"
+        style="@style/TextInputLayout.SecondaryColored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -19,9 +20,10 @@
         app:layout_constraintVertical_bias="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/login_password_edit_text_email"
+            android:id="@+id/login_entry_edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:hint="@string/login_entry_text_email" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -35,6 +37,6 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/login_entry_text_input_layout_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
