--- a/app/src/main/res/layout/activity_login_password.xml
+++ b/app/src/main/res/layout/activity_login_password.xml
@@ -15,36 +15,47 @@
         android:layout_marginBottom="16dp"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+        app:layout_constraintBottom_toTopOf="@+id/login_password_text_input_layout_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="email@host.root" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/login_password_text_input_layout_password"
+        style="@style/TextInputLayout.SecondaryColored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        app:helperTextTextColor="@color/red_700"
+        app:endIconMode="password_toggle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4"
-        app:endIconMode="password_toggle">
+        app:layout_constraintVertical_bias="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_password_edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/login_password_text_password" />
+            android:hint="@string/login_password_text_password"
+            android:background="@color/white"
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/login_password_check_box_remember_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/login_password_remember_me"
+        app:layout_constraintStart_toStartOf="@+id/login_password_text_input_layout_password"
+        app:layout_constraintTop_toBottomOf="@+id/login_password_text_input_layout_password" />
+
     <com.google.android.material.button.MaterialButton
-        style="@style/Button.Filled.Rounded"
         android:id="@+id/login_password_button_login"
+        style="@style/Button.Filled.Rounded"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -52,6 +63,20 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/login_password_check_box_remember_me" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/login_password_button_forgot_password"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/login_password_forgot_password"
+        android:textAllCaps="false"
+        android:textColor="@color/blue_700"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/login_password_button_login"
+        app:layout_constraintStart_toStartOf="@+id/login_password_button_login"
+        app:layout_constraintTop_toBottomOf="@+id/login_password_button_login"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
