--- a/app/src/main/res/layout/activity_animal.xml
+++ b/app/src/main/res/layout/activity_animal.xml
@@ -133,7 +133,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/animal_edit_text_weight"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
