--- a/app/src/main/res/layout/item_home_group.xml
+++ b/app/src/main/res/layout/item_home_group.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/home_group_container_group"
@@ -60,7 +60,9 @@
         <ListView
             android:id="@+id/home_group_list_view_animal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <ImageButton
             android:id="@+id/home_group_image_button_animal_new"
@@ -68,7 +70,9 @@
             android:layout_height="60dp"
             android:background="@color/grey_100"
             android:src="@drawable/ic_add_black_24dp"
-            android:tint="@color/grey_700" />
+            android:tint="@color/grey_700"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <View
             android:layout_width="match_parent"
@@ -89,7 +93,7 @@
             android:layout_height="60dp"
             android:background="@color/white"
             android:src="@drawable/ic_add_black_24dp"
-            android:tint="@color/grey_700" />
+            android:tint="@color/grey_700"/>
 
         <View
             android:layout_width="match_parent"
