--- a/app/src/main/res/layout/activity_login_entry.xml
+++ b/app/src/main/res/layout/activity_login_entry.xml
@@ -17,13 +17,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+        app:layout_constraintVertical_bias="0.29">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_entry_edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
+            android:textSize="18sp"
             android:hint="@string/login_entry_text_email" />
     </com.google.android.material.textfield.TextInputLayout>
 
