--- a/app/src/main/res/layout/activity_calendar_selection.xml
+++ b/app/src/main/res/layout/activity_calendar_selection.xml
@@ -7,15 +7,69 @@
     android:layout_height="match_parent"
     tools:context=".calendar.activity.CalendarSelectionActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primaryColor"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/calendar_selection_button_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/calendar_selection_text_view_name"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Animal Name"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/calendar_selection_button_back"
+            app:layout_constraintStart_toEndOf="@+id/calendar_selection_button_back"
+            app:layout_constraintTop_toTopOf="@+id/calendar_selection_button_back" />
+
+        <ImageButton
+            android:id="@+id/calendar_selection_button_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/calendar_selection_button_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/calendar_selection_button_back"
+            app:srcCompat="@drawable/ic_add_white_24dp" />
+
+        <ImageButton
+            android:id="@+id/calendar_selection_button_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/calendar_selection_button_back"
+            app:layout_constraintEnd_toStartOf="@+id/calendar_selection_button_add"
+            app:layout_constraintTop_toTopOf="@+id/calendar_selection_button_back"
+            app:srcCompat="@drawable/ic_show_chart_white_24dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.gachon.priend.calendar.view.MemoListView
         android:id="@+id/calendar_selection_memo_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
         app:layout_constraintVertical_bias="0.0" />
 
     <fragment
