--- a/app/src/main/res/layout/activity_bulletin_list.xml
+++ b/app/src/main/res/layout/activity_bulletin_list.xml
@@ -6,9 +6,8 @@
 
     <!-- A RecyclerView with some commonly used attributes -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
+        android:id="@+id/bulletin_list_recycler_view_boards"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F0F0F0"
         android:scrollbars="vertical" />
 </LinearLayout>
