--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MapActivity">
+    tools:context=".Map.MapActivity">
 
     <fragment
         android:id="@+id/map"
@@ -23,8 +23,7 @@
         android:layout_margin="15dp"
         android:layout_weight="0.7"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_mapList"
         android:scaleType="centerCrop"
-        />
+        android:src="@drawable/ic_map_list" />
 
 </FrameLayout>
