--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -63,6 +63,8 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:enabled="false"
+                    android:imeOptions="actionDone"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     tools:text="이름" />
